# SegviGen

./: .gitignore  README.md  app.py  guidance_map.py  inference.py  inference_full.py  inference_interactive.py  install.sh  pyproject.toml  server.py  split.py  util.py
data_toolkit/: example_full_seg.py  example_full_seg_w_2d_map.py  img_to_cond.py
flex_gemm/kernels/triton/: utils.py
flex_gemm/kernels/triton/grid_sample/: indice_weighed_sum_fwd.py
flex_gemm/ops/spconv/: __init__.py
flex_gemm/utils/: autotuner.py
frontend/: tsconfig.tsbuildinfo
frontend/src/: App.js  App.tsx
frontend/src/components/tabs/: Full2DTab.js  Full2DTab.tsx  SegTab.js  SegTab.tsx
segvigen/: __init__.py  _samplers.py  _shared.py  full.py  full_guided.py  interactive.py  presets.py
static/: index.html
